--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       However, it suffers from errors of recognition and pronunciation and the requirements of a large amount of data for a pre-trained ASR model.
       To remedy the above drawbacks, we propose an approach to enhance the model stability and training efficiency of a VC system.
       Firstly, a data redundancy reduction method is used to balance the distribution of vocabulary for avoiding uncommon words being ignored during the training process,
-      by adding CTC loss, the WER of our system declines to $3.02$, which is $5.63\%$ lower than that of the ASR-TTS system ($8.65\%$),
-      and the inference speed (e.g., real-time rate $19.32$) of our VC system are much faster than those of the baseline (real-time rate $2.24$).
+      by adding CTC loss, the WER of our system declines to 3.02, which is 5.63% lower than that of the ASR-TTS system (8.65%),
+      and the inference speed (e.g., real-time rate 19.32) of our VC system are much faster than those of the baseline (real-time rate 2.24).
       Finally, the emotional embedding is added to the pre-trained VC system to generate expressive speech conversion.
       The results show that after fine-tuning on the multi-emotional dataset, the system can achieve high quality and expressive speech synthesis.
 
