--- a/index.html
+++ b/index.html
@@ -210,31 +210,31 @@
         <tbody>
         <tr>
           <td><div width="600" align="center"></div></td>
-          <td colspan="1"> <p align="center">(Anger)<br>差不多，都是娱乐行业。</p> </td>
-          <td colspan="1"> <p align="center">(Happiness)<br>所有的苦难都源于我是一个吃货。</p> </td>
-          <td colspan="1"> <p align="center">(Neutral)<br>福建表叔厅长来了。</p> </td>
-          <td colspan="1"> <p align="center">(Sadness)<br>我只想说有需求就有市场。</p> </td>
+          <td colspan="1"> <p align="center">(Anger)<br>躺椅不错，适合卧着悦读。<br>是不是靠植物太近了。</p> </td>
+          <td colspan="1"> <p align="center">(Happiness)<br>边伺候他，边窥伺动静。</p> </td>
+          <td colspan="1"> <p align="center">(Neutral)<br>分析的靠谱！大辉，一如既往的牛人！</p> </td>
+          <td colspan="1"> <p align="center">(Sadness)<br>上校到校场找人校对材料。</p> </td>
         </tr>
         <tr>
           <td nowrap width="198">Our Proposed (with CTC)</td>
-          <td><audio controls="" preload="none"><source src="wavs/CTC/withCTC/angry0106.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/CTC/withCTC/happy0191.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/CTC/withCTC/norm0217.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/CTC/withCTC/sad0300.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/CTC/withCTC/angry0086.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/CTC/withCTC/happy0499.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/CTC/withCTC/norm0013.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/CTC/withCTC/sad0076.wav"></audio></td>
         </tr>
         <tr>
           <td nowrap width="198">Our Proposed (without CTC)</td>
-          <td><audio controls="" preload="none"><source src="wavs/CTC/withoutCTC/angry0106.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/CTC/withoutCTC/happy0191.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/CTC/withoutCTC/norm0217.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/CTC/withoutCTC/sad0300.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/CTC/withoutCTC/angry0086.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/CTC/withoutCTC/happy0499.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/CTC/withoutCTC/norm0013.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/CTC/withoutCTC/sad0076.wav"></audio></td>
         </tr>
         <tr>
           <td nowrap width="198">Kaldi (CVTE M2) + MTTS</td>
-          <td><audio controls="" preload="none"><source src="wavs/CTC/baseline/angry0106.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/CTC/baseline/happy0191.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/CTC/baseline/norm0217.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/CTC/baseline/sad0300.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/CTC/baseline/angry0086.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/CTC/baseline/happy0499.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/CTC/baseline/norm0013.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/CTC/baseline/sad0076.wav"></audio></td>
         </tr>
         </tbody>
       </table>
