--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <td><div width="600" align="center"></div></td>
           <td colspan="1"> <p align="center">(Anger)<br>躺椅不错，适合卧着悦读。<br>是不是靠植物太近了。</p> </td>
           <td colspan="1"> <p align="center">(Happiness)<br>边伺候他，边窥伺动静。</p> </td>
-          <td colspan="1"> <p align="center">(Neutral)<br>分析的靠谱！大辉，一如既往的牛人！</p> </td>
+          <td colspan="1"> <p align="center">(Neutral)<br>分析的靠谱！<br>大辉，一如既往的牛人！</p> </td>
           <td colspan="1"> <p align="center">(Sadness)<br>上校到校场找人校对材料。</p> </td>
         </tr>
         <tr>
