--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
     <div>
       <b>Abstract:</b>
 
-      Recently, voice conversion systems (VC) have been made great progress thanks to advanced deep learning methods.
-      Current researches not only pursues high-quality and fast speed of audio synthesis, but also requires richer expressiveness.
-      The most popular VC system was constructed on the concatenation of an automatic speech recognition module with a text-to-speech module (ASR-TTS).
-      However, it suffers from errors of recognition and pronunciation and the requirements of a large amount of data for a pre-trained ASR model.
-      To remedy the above drawbacks, we propose an approach to enhance the model stability and training efficiency of a VC system.
-      Firstly, a data redundancy reduction method is used to balance the distribution of vocabulary for avoiding uncommon words being ignored during the training process,
-      by adding CTC loss, the WER of our system declines to 3.02, which is 5.63% lower than that of the ASR-TTS system (8.65%),
-      and the inference speed (e.g., real-time rate 19.32) of our VC system are much faster than those of the baseline (real-time rate 2.24).
-      Finally, the emotional embedding is added to the pre-trained VC system to generate expressive speech conversion.
-      The results show that after fine-tuning on the multi-emotional dataset, the system can achieve high quality and expressive speech synthesis.
+        Voice conversion (VC) systems have made significant progress owing to advanced deep learning methods. Current research is not
+        only concerned with high-quality and fast audio synthesis, but also richer expressiveness. The most popular VC system was constructed
+        from the concatenation of an automatic speech recognition module with a text-to-speech module (ASR-TTS). Yet this system suffers
+        from errors in recognition and pronunciation and it also requires a large amount of data for a pre-trained ASR mode l. We propose an
+        approach to improve the model stability and training efficiency of a VC system. Firstly, a data redundancy reduction method is used to
+        balance the distribution of vocabulary to avoid uncommon words being ignored during the training process; by adding connectionist
+        temporal classification (CTC) loss, the word error rate (WER) of our system reduces to 3.02%, which is 5.63 percentage points lower
+        than that of the ASR-TTS system (8.65%), and the inference speed (e.g., real-time rate 19.32) of our VC system is much higher than
+        that of the baseline system (real-time rate 2.24). Finally, emotional embedding is added to the pre-trained VC system to generate
+        expressive speech conversion. The results show that after fine-tuning on the multi-emotional dataset, the system can achieve high
+        quality and expressive speech synthesis.
 
     <p></p>
+    [<a href="ACM_Expressive_Voice_Conversion.pdf">pdf</a>][<a href="ACM_Expressive_Voice_Conversion.pptx">slides</a>]
     </div>
 
 
